<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/city_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityinfoTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/city_info"
        android:textSize="19sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <TextView
        android:id="@+id/coordTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/coord_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityinfoTextView" />

    <TextView
        android:id="@+id/coordinfoTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/coord_info"
        android:textSize="19sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordTextView" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/temp_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinfoTextView" />

    <TextView
        android:id="@+id/tempinfoTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/temp_info"
        android:textSize="19sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <TextView
        android:id="@+id/humindTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/humid_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempinfoTextView" />

    <TextView
        android:id="@+id/humidinfoTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/humid_info"
        android:textSize="19sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humindTextView" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/pressure_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidinfoTextView" />

    <TextView
        android:id="@+id/pressureinfoTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/pressure_info"
        android:textSize="19sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/delete"
        android:onClick="sendButton"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/modify"
        android:onClick="sendButton"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>